# lbd

./: .gitignore  main.py  pyproject.toml
data/mlp_tf_dataset/: dataset_spec.pb  snapshot.metadata
data/rnn_tf_dataset/: dataset_spec.pb  snapshot.metadata
src/: data_exploration.ipynb  data_utils.py  main-lstm.py  main-mlp.py  nn_stuff.ipynb  plotting.py  train.py  utils.py
src/models/: main-lstm.py  main-mlp.py  main-transformer.py  main_igbt.py  main_igbtv2.py  main_lstm.py  main_mlp.py  main_transformer.py
