[project]
name = "lbd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
]
