[project]
name = "lbd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.0",
    "pyarrow>=20.0.0",
    "ruff>=0.11.7",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
]
